<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:clipToPadding="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_close_option"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:clipToPadding="false">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimise_chat"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:background="@drawable/white_background_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_end_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_chat"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:background="@drawable/blue_background_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

</LinearLayout>