<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StartSurveyFragment"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_alignParentRight="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/img_close">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/start_survey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_us_improve"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="@color/royal_blue"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_us_improve_1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start_survey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_survey"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/blue_background_button"
                android:layout_marginTop="20dp" />
        </LinearLayout>

    </RelativeLayout>
</layout>