<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="chatadapter"
            type="com.example.myapplication.adapter.SecureChatAdapter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SecureChatMainFragment">

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/actionbar_gradient"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_chat"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_chat_connect_agent"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_chat_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btn_send"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/send_icon"/>

            <EditText
                android:id="@+id/txt_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/type_msg"
                android:layout_toLeftOf="@id/btn_send"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/darker_gray"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_chat_bottom"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:adapter="@{chatadapter}"
            app:ScrollToBottom="@{chatadapter.scrollTo}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_below="@id/action_bar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shadow"
            android:layout_above="@id/layout_chat_bottom"/>

    </RelativeLayout>
</layout>